; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/nfsserver/extr_nfs_nfsdport.c_nfsrv_setextattr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/nfsserver/extr_nfs_nfsdport.c_nfsrv_setextattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i32 }
%struct.nfsvattr = type { i32, i32, i32, i32 }
%struct.pnfsdsattr = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [20 x i8] c"nfsrv_setextattr vp\00", align 1
@IO_NODELOCKED = common dso_local global i32 0, align 4
@EXTATTR_NAMESPACE_SYSTEM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c"pnfsd.dsattr\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"pNFS: setextattr=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vnode*, %struct.nfsvattr*, i32*)* @nfsrv_setextattr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfsrv_setextattr(%struct.vnode* %0, %struct.nfsvattr* %1, i32* %2) #0 {
  %4 = alloca %struct.vnode*, align 8
  %5 = alloca %struct.nfsvattr*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.pnfsdsattr, align 4
  %8 = alloca i32, align 4
  store %struct.vnode* %0, %struct.vnode** %4, align 8
  store %struct.nfsvattr* %1, %struct.nfsvattr** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.vnode*, %struct.vnode** %4, align 8
  %10 = call i32 @ASSERT_VOP_ELOCKED(%struct.vnode* %9, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %11 = load %struct.nfsvattr*, %struct.nfsvattr** %5, align 8
  %12 = getelementptr inbounds %struct.nfsvattr, %struct.nfsvattr* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = getelementptr inbounds %struct.pnfsdsattr, %struct.pnfsdsattr* %7, i32 0, i32 3
  store i32 %13, i32* %14, align 4
  %15 = load %struct.nfsvattr*, %struct.nfsvattr** %5, align 8
  %16 = getelementptr inbounds %struct.nfsvattr, %struct.nfsvattr* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds %struct.pnfsdsattr, %struct.pnfsdsattr* %7, i32 0, i32 2
  store i32 %17, i32* %18, align 4
  %19 = load %struct.nfsvattr*, %struct.nfsvattr** %5, align 8
  %20 = getelementptr inbounds %struct.nfsvattr, %struct.nfsvattr* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = getelementptr inbounds %struct.pnfsdsattr, %struct.pnfsdsattr* %7, i32 0, i32 1
  store i32 %21, i32* %22, align 4
  %23 = load %struct.nfsvattr*, %struct.nfsvattr** %5, align 8
  %24 = getelementptr inbounds %struct.nfsvattr, %struct.nfsvattr* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = getelementptr inbounds %struct.pnfsdsattr, %struct.pnfsdsattr* %7, i32 0, i32 0
  store i32 %25, i32* %26, align 4
  %27 = load %struct.vnode*, %struct.vnode** %4, align 8
  %28 = load i32, i32* @IO_NODELOCKED, align 4
  %29 = load i32, i32* @EXTATTR_NAMESPACE_SYSTEM, align 4
  %30 = bitcast %struct.pnfsdsattr* %7 to i8*
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @vn_extattr_set(%struct.vnode* %27, i32 %28, i32 %29, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 16, i8* %30, i32* %31)
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %8, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %3
  %36 = load i32, i32* %8, align 4
  %37 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i32 %36)
  br label %38

38:                                               ; preds = %35, %3
  %39 = load i32, i32* %8, align 4
  ret i32 %39
}

declare dso_local i32 @ASSERT_VOP_ELOCKED(%struct.vnode*, i8*) #1

declare dso_local i32 @vn_extattr_set(%struct.vnode*, i32, i32, i8*, i32, i8*, i32*) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
